Country as param and fixed z-index

--- a/src/css/CountryPage.css
+++ b/src/css/CountryPage.css
@@ -23,6 +23,7 @@
     padding: 5px;
     width: 40px;
     height: 40px;
+    z-index: 99999999;
 }
 
 .country-page-container .back-button img {
